force-app/main/default/objects/Account/fields/Certification_of_Liability_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Certification_of_Liability_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification of Liability Insurance</label>
    <type>Checkbox</type>
</CustomField>