force-app/main/default/objects/Account/fields/Current_Academic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Academic_Salary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Academic Salary</label>
    <type>Checkbox</type>
</CustomField>