force-app/main/default/objects/Account/fields/Employee_Medical_Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Employee_Medical_Insurance_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Medical Insurance Policy</label>
    <type>Checkbox</type>
</CustomField>