force-app/main/default/objects/Account/fields/Housing_1_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_1_Lead_Type__c</fullName>
    <label>Housing 1 Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Realtor/relocation service</fullName>
            </value>
            <value>
                <fullName>Apartment complex</fullName>
            </value>
            <value>
                <fullName>Independent landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>