force-app/main/default/objects/Account/fields/Interested_in_GHT__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_GHT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in GHT</label>
    <type>Checkbox</type>
</CustomField>