force-app/main/default/objects/Account/fields/Interested_in_HSP__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_HSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in HSP</label>
    <type>Checkbox</type>
</CustomField>