force-app/main/default/objects/Account/fields/Monthly_pass__c.field-meta.xml
<CustomField>
    <fullName>Monthly_pass__c</fullName>
    <label>Monthly pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>