force-app/main/default/objects/Account/fields/Num_of_International_teachers__c.field-meta.xml
<CustomField>
    <fullName>Num_of_International_teachers__c</fullName>
    <label>Num of International teachers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>