force-app/main/default/objects/Account/fields/Placement_Profile_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_Profile_Date__c</fullName>
    <description>Date Signed from the Placement Profile on the Teach USA Portal</description>
    <label>Placement Profile Date</label>
    <type>Date</type>
</CustomField>