force-app/main/default/objects/Account/fields/Placement_Profile_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Profile_Full_Name__c</fullName>
    <description>Signer&apos;s Name from Placement Profile form on Teach USA Portal</description>
    <label>Placement Profile Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>