force-app/main/default/objects/Account/fields/Proof_of_School_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_School_Accreditation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of School Accreditation</label>
    <type>Checkbox</type>
</CustomField>