force-app/main/default/objects/Account/fields/Recommended_transfer_company__c.field-meta.xml
<CustomField>
    <fullName>Recommended_transfer_company__c</fullName>
    <label>Recommended transfer company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>