force-app/main/default/objects/Account/fields/State_Date_Range_Latest__c.field-meta.xml
<CustomField>
    <fullName>State_Date_Range_Latest__c</fullName>
    <label>State Date Range-Latest</label>
    <type>Date</type>
</CustomField>