force-app/main/default/objects/Account/fields/Terms_and_Conditions_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Full_Name__c</fullName>
    <label>Terms and Conditions Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>