force-app/main/default/objects/Account/fields/Transfer_company_website__c.field-meta.xml
<CustomField>
    <fullName>Transfer_company_website__c</fullName>
    <label>Transfer company website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>